# second-year-course-project

./: README.md
intervals-novikova/: CMakeLists.txt  README.md  main.cpp
intervals-novikova/data/: test_do_not_modify.csv
intervals-novikova/intervals_c/: set_interval.c  tests_c.c
intervals-novikova/intervals_c/headers/: interval.h  set_interval.h  tests_c.h
intervals-novikova/intervals_c/source/: set_interval.c
intervals-novikova/intervals_c/tests/: tests_c.c
intervals-novikova/intervals_cpp/: IntervalWrapper.cpp  IntervalWrapper.h  SetIntervalWrapper.cpp  SetIntervalWrapper.h  cross_tests.cpp  cross_tests.h  service.cpp
intervals-novikova/intervals_cpp/headers/: Inequality.h  IntervalWrapper.h  Service.h  ServiceTests.h  SetIntervalWrapper.h  cross_tests.h  service.h
intervals-novikova/intervals_cpp/source/: Inequality.cpp  IntervalWrapper.cpp  Service.cpp  SetIntervalWrapper.cpp  service.cpp
intervals-novikova/intervals_cpp/tests/: ServiceTests.cpp  cross_tests.cpp
